Added text shadow to page titles, bio paragraph, and contact info. Put blue border on bio chart. Updated chart changing React to 8 and GIT to 9.

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 							</tr>
 							<tr class="codingSkillRow" id="codingSkill">
 								<td class="codingSkill">React</td>
-								<td class="codingSkillVal">7</td>
+								<td class="codingSkillVal">8</td>
 								<td class="codingSkillBar"><div></div></td>
 								<td class="codingSkillBar"><div></div></td>
 								<td class="codingSkillBar"><div></div></td>
@@ -147,13 +147,13 @@
 								<td class="codingSkillBar"><div></div></td>
 								<td class="codingSkillBar"><div></div></td>
 								<td class="codingSkillBar"><div></div></td>
-								<td class="codingSkillBar empty"><div></div></td>
+								<td class="codingSkillBar"><div></div></td>
 								<td class="codingSkillBar empty"><div></div></td>
 								<td class="codingSkillBar empty"><div></div></td>
 							</tr>
 							<tr class="codingSkillRow" id="codingSkill">
 								<td class="codingSkill">GIT</td>
-								<td class="codingSkillVal">7</td>
+								<td class="codingSkillVal">9</td>
 								<td class="codingSkillBar"><div></div></td>
 								<td class="codingSkillBar"><div></div></td>
 								<td class="codingSkillBar"><div></div></td>
@@ -161,8 +161,8 @@
 								<td class="codingSkillBar"><div></div></td>
 								<td class="codingSkillBar"><div></div></td>
 								<td class="codingSkillBar"><div></div></td>
-								<td class="codingSkillBar empty"><div></div></td>
-								<td class="codingSkillBar empty"><div></div></td>
+								<td class="codingSkillBar"><div></div></td>
+								<td class="codingSkillBar"><div></div></td>
 								<td class="codingSkillBar empty"><div></div></td>
 							</tr>
 							<tr class="codingSkillRow" id="codingSkill">
